templates/CoreApi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: CoreApi
  namespace: Production
  labels:
    app: CoreApi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: CoreApi
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: CoreApi
    spec:
      containers:
      - name: CoreApi
        image: CoreApi:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
