templates/mysql-service.yml
---
#this service will be serving traffic to mysql deployments.
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: production
  labels:
    service: mysql
spec:
  ports:
  - port: 3306
    selector:
      app: mysql
    clusterIP: None
